--- a/NOVA/Views/Satis/DetayliSiparis.cshtml
+++ b/NOVA/Views/Satis/DetayliSiparis.cshtml
@@ -332,7 +332,7 @@
             $('#dovtip').select2({ placeholder: "Döviz Tipi" });
         }).then(function () {
             document.querySelectorAll('input[type="search"]')[0].onkeyup = function () {
-                document.querySelectorAll('input[type="search"]')[0].value = event.currentTarget.value.toUpperCase().replaceAll("I", "İ");
+                document.querySelectorAll('input[type="search"]')[0].value = event.currentTarget.value.toLocaleUpperCase('TR');
             };
         })
 
