--- a/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Barcode.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Barcode.cshtml
@@ -158,7 +158,7 @@
     }
 
     function BarkodBakiyeGetir(BarkodNo) {
-        var ProcUrl = "http://192.168.2.13:83/api/seri/bakiye/" + BarkodNo;
+        var ProcUrl = "http://192.168.2.13:83/api/seri/bakiye/" + BarkodNo + "/" + CikisDepo;
 
         $.getJSON(ProcUrl, function (data) {
             if (data.length > 0) {
@@ -171,8 +171,8 @@
                         $('#MIKTAR').val(data[0].MIKTAR.toFixed(2));
                         $('#MIKTAR2').val(data[0].MIKTAR2.toFixed(2));
                         $('#SERI_NO').val(BarkodNo);
-                        $('#ACIK1').val(parseFloat(data[0].ACIK1.replace(",", ".")).toFixed(2).toString().replace(".", ","));
-                        $('#ACIK2').val(parseFloat(data[0].ACIK2.replace(",", ".")).toFixed(1).toString().replace(".", ","));
+                        $('#ACIK1').val(data[0].ACIK2);
+                        $('#ACIK2').val(data[0].ACIK1);
                         $('#ACIK3').val(data[0].ACIK3);
                         $('#SERI_NO_3').val(data[0].SERI_NO_3);
                         $('#SERI_NO_4').val(data[0].SERI_NO_4);
