--- a/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Belge.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Belge.cshtml
@@ -180,7 +180,7 @@
     }
 
     $('#DepoTransferBelgeTable').on('expand-row.bs.table', function (e, index, row, $detail) {
-        $detail.html(`<div class="card-body" style="background-color:mintcream;"> <div class="table-responsive"> <table id="SevkFormBelgeDetay${row.BELGE_NO}Table" class="belgedetailtbl table-sm" data-search="false" data-show-refresh="false" data-show-toggle="false" data-show-fullscreen="false" data-show-columns="false" data-show-columns-toggle-all="false" data-detail-view="false" data-show-export="false" data-click-to-select="true" data-minimum-count-columns="2" data-show-pagination-switch="false" data-page-size="4" data-page-list="[5,20,50,100]" data-pagination-parts="['pageInfo','pageList']" data-pagination="true" data-id-field="id" data-show-footer="false" data-mobile-responsive="true" data-response-handler="responseHandler" data-locale="tr-TR" data-row-style="DetailSatirStili"> <thead> <tr> <th data-formatter="NullCheck" data-field="SERI_NO" data-halign="center" data-align="center"  >SERİ NO</th> <th data-formatter="NullCheck" data-field="STOK_ADI" data-halign="center" data-align="center"  >STOK ADI</th>  <th data-formatter="MiktarFormatla" data-field="MIKTAR1" data-halign="center" data-align="center"  >MİKTAR 1</th> <th data-formatter="NullCheck" data-field="OLCU_BR1" data-halign="center" data-align="center"  >ÖLÇÜ BİRİMİ 1</th> <th data-formatter="MiktarFormatla" data-field="MIKTAR2" data-halign="center" data-align="center"  >MİKTAR 2</th> <th data-formatter="NullCheck" data-field="OLCU_BR2" data-halign="center" data-align="center"  >ÖLÇÜ BİRİMİ 2</th> <th data-formatter="KalinlikFormatter" data-field="ACIK1" data-halign="center" data-align="center"  >KALINLIK</th> <th data-formatter="GenislikFormatter" data-field="ACIK2" data-halign="center" data-align="center"  >GENİŞLİK</th> <th data-formatter="NullCheck" data-field="ACIK3" data-halign="center" data-align="center"  >ÜRÜN NO</th> <th data-formatter="NullCheck" data-field="SERI_NO_3" data-halign="center" data-align="center"  >KALİTE</th> <th data-formatter="NullCheck" data-field="SERI_NO_4" data-halign="center" data-align="center"  >KAPLAMA KALINLIĞI</th> <th data-formatter="BelgeDurumuFormatter" data-field="ACTIVE" data-halign="center" data-align="center"  >Durum</th> </tr></thead> </table> </div></div>`);
+        $detail.html(`<div class="card-body" style="background-color:mintcream;"> <div class="table-responsive"> <table id="SevkFormBelgeDetay${row.BELGE_NO}Table" class="belgedetailtbl table-sm" data-search="false" data-show-refresh="false" data-show-toggle="false" data-show-fullscreen="false" data-show-columns="false" data-show-columns-toggle-all="false" data-detail-view="false" data-show-export="false" data-click-to-select="true" data-minimum-count-columns="2" data-show-pagination-switch="false" data-page-size="4" data-page-list="[5,20,50,100]" data-pagination-parts="['pageInfo','pageList']" data-pagination="true" data-id-field="id" data-show-footer="false" data-mobile-responsive="true" data-response-handler="responseHandler" data-locale="tr-TR" data-row-style="DetailSatirStili"> <thead> <tr> <th data-formatter="NullCheck" data-field="SERI_NO" data-halign="center" data-align="center"  >SERİ NO</th> <th data-formatter="NullCheck" data-field="STOK_ADI" data-halign="center" data-align="center"  >STOK ADI</th>  <th data-formatter="MiktarFormatla" data-field="MIKTAR1" data-halign="center" data-align="center"  >MİKTAR 1</th> <th data-formatter="NullCheck" data-field="OLCU_BR1" data-halign="center" data-align="center"  >ÖLÇÜ BİRİMİ 1</th> <th data-formatter="MiktarFormatla" data-field="MIKTAR2" data-halign="center" data-align="center"  >MİKTAR 2</th> <th data-formatter="NullCheck" data-field="OLCU_BR2" data-halign="center" data-align="center"  >ÖLÇÜ BİRİMİ 2</th> <th data-formatter="KalinlikFormatter" data-field="ACIK2" data-halign="center" data-align="center"  >KALINLIK</th> <th data-formatter="GenislikFormatter" data-field="ACIK1" data-halign="center" data-align="center"  >GENİŞLİK</th> <th data-formatter="NullCheck" data-field="ACIK3" data-halign="center" data-align="center"  >ÜRÜN NO</th> <th data-formatter="NullCheck" data-field="SERI_NO_3" data-halign="center" data-align="center"  >KALİTE</th> <th data-formatter="NullCheck" data-field="SERI_NO_4" data-halign="center" data-align="center"  >KAPLAMA KALINLIĞI</th> <th data-formatter="BelgeDurumuFormatter" data-field="ACTIVE" data-halign="center" data-align="center"  >Durum</th> </tr></thead> </table> </div></div>`);
 
         var FiltreliBelgeler = DuzenlenmemisBelgeler.filter(x => x.SIPARIS_NO == row.SIPARIS_NO && x.BELGE_NO == row.BELGE_NO);
 
@@ -193,9 +193,9 @@
                 "STOK_KODU": FiltreliBelgeler[i].STOK_KODU,
                 "STOK_ADI": FiltreliBelgeler[i].STOK_ADI,
                 "SERI_NO": FiltreliBelgeler[i].SERI_NO,
-                "MIKTAR1": parseFloat(FiltreliBelgeler[i].MIKTAR1).toFixed(2),
+                "MIKTAR1": FiltreliBelgeler[i].MIKTAR1,
                 "OLCU_BR1": FiltreliBelgeler[i].OLCU_BR1,
-                "MIKTAR2": parseFloat(FiltreliBelgeler[i].MIKTAR2).toFixed(2),
+                "MIKTAR2": FiltreliBelgeler[i].MIKTAR2,
                 "OLCU_BR2": FiltreliBelgeler[i].OLCU_BR2,
                 "ACIK1": FiltreliBelgeler[i].ACIK1,
                 "ACIK2": FiltreliBelgeler[i].ACIK2,
@@ -290,8 +290,8 @@
                 "MIKTAR2": data[i].MIKTAR2,
                 "OLCU_BR2": data[i].OLCU_BR2,
                 "SERI_NO": data[i].SERI_NO,
-                "ACIK1": data[i].ACIK1,
-                "ACIK2": data[i].ACIK2,
+                "ACIK1": data[i].ACIK2,
+                "ACIK2": data[i].ACIK1,
                 "ACIK3": data[i].ACIK3,
                 "SERI_NO_3": data[i].SERI_NO_3,
                 "SERI_NO_4": data[i].SERI_NO_4,
