--- a/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Modal.cshtml
@@ -243,6 +243,7 @@
         KayitTipi = 0;
 
         $('#CIKIS_DEPO').val('');
+        $('#CIKIS_DEPO').prop("disabled", false);
         CikisDepo = -1;
 
         StokAdlariniAyarla();
@@ -453,8 +454,8 @@
         var MIKTAR2 = $('#MIKTAR2').val()
         var OLCU_BR2 = $('#OLCU_BR2').val()
         var SERI_NO = $('#SERI_NO').val()
-        var ACIK1 = parseFloat($('#ACIK1').val().replace(',', '.'))
-        var ACIK2 = parseFloat($('#ACIK2').val().replace(',', '.'))
+        var ACIK1 = $('#ACIK1').val()
+        var ACIK2 = $('#ACIK2').val()
         var ACIK3 = $('#ACIK3').val()
         var SERI_NO_3 = $('#SERI_NO_3').val()
         var SERI_NO_4 = $('#SERI_NO_4').val()
@@ -490,8 +491,8 @@
         $('#MIKTAR2').val(Kayit.MIKTAR2)
         $('#OLCU_BR2').val(Kayit.OLCU_BR2)
         $('#SERI_NO').val(Kayit.SERI_NO)
-        $('#ACIK1').val(parseFloat(Kayit.ACIK1.toString().replace(',', '.')).toFixed(2).toString().replace('.', ','))
-        $('#ACIK2').val(parseFloat(Kayit.ACIK2.toString().replace(',', '.')).toFixed(1).toString().replace('.', ','))
+        $('#ACIK1').val(Kayit.ACIK1)
+        $('#ACIK2').val(Kayit.ACIK2)
         $('#ACIK3').val(Kayit.ACIK3)
         $('#SERI_NO_3').val(Kayit.SERI_NO_3)
         $('#SERI_NO_4').val(Kayit.SERI_NO_4)
@@ -591,7 +592,7 @@
             let ESKI_MIKTAR2 = Kayit[0].MIKTAR2;
 
             $.ajax({
-                url: "http://192.168.2.13:83/api/seri/bakiye/" + Kayit[0].SERI_NO,
+                url: "http://192.168.2.13:83/api/seri/bakiye/" + Kayit[0].SERI_NO + "/" + CikisDepo,
                 type: 'GET',
                 success: function (result) {
                     switch (KayitTipi) {
@@ -801,8 +802,8 @@
                         "OLCU_BR1": Kayitlar[i].OLCU_BR1,
                         "MIKTAR2": parseFloat(Kayitlar[i].MIKTAR2),
                         "OLCU_BR2": Kayitlar[i].OLCU_BR2,
-                        "ACIK1": Kayitlar[i].ACIK1,
-                        "ACIK2": Kayitlar[i].ACIK2,
+                        "ACIK1": Kayitlar[i].ACIK2,
+                        "ACIK2": Kayitlar[i].ACIK1,
                         "ACIK3": Kayitlar[i].ACIK3,
                         "SERI_NO_3": Kayitlar[i].SERI_NO_3,
                         "SERI_NO_4": Kayitlar[i].SERI_NO_4,
@@ -871,8 +872,8 @@
                 "OLCU_BR1": Kayitlar[i].OLCU_BR1,
                 "MIKTAR2": parseFloat(Kayitlar[i].MIKTAR2),
                 "OLCU_BR2": Kayitlar[i].OLCU_BR2,
-                "ACIK1": Kayitlar[i].ACIK1,
-                "ACIK2": Kayitlar[i].ACIK2,
+                "ACIK1": Kayitlar[i].ACIK2,
+                "ACIK2": Kayitlar[i].ACIK1,
                 "ACIK3": Kayitlar[i].ACIK3,
                 "SERI_NO_3": Kayitlar[i].SERI_NO_3,
                 "SERI_NO_4": Kayitlar[i].SERI_NO_4,
