--- a/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
@@ -328,7 +328,7 @@
                 $('#table').bootstrapTable({ data: data })
             }).done(function () {
                 document.querySelectorAll('input[type="search"]')[0].onkeyup = function (e) {
-                    document.querySelectorAll('input[type="search"]')[0].value = e.currentTarget.value.replaceAll("ı", "I").replaceAll("i", "İ").toUpperCase();
+                    document.querySelectorAll('input[type="search"]')[0].value = e.currentTarget.value.toLocaleUpperCase('TR');
                 };
                 HideProgress();
             });
