--- a/NOVA/Views/Uretim/Partials/MES/AllMachines/_MainPartial.cshtml
+++ b/NOVA/Views/Uretim/Partials/MES/AllMachines/_MainPartial.cshtml
@@ -63,6 +63,7 @@
             gap: 0.5rem;
             line-height: 1rem;
             text-align: center;
+            word-break: break-word;
         }
 </style>
 
@@ -202,7 +203,7 @@
     function GunlukOzetBox(Data) {
         var Ozet =
             `
-            <div class="d-flex justify-content-center align-items-start gap-3" style="font-size:small;">
+            <div class="d-flex justify-content-center align-items-start gap-2" style="font-size:small;">
                 <div class="d-flex flex-column justify-content-center align-items-center gap-1">
                     <span><b>ÜR. MİKTAR</b></span>
                     <span>${NumFormat(Data.GUNLUK_TOPLAM_MIKTAR, 'KG')}</span>
