--- a/NOVA/Views/Sevkiyat/SevkMalKabulPartials/SevMalKabulSeriNo_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/SevkMalKabulPartials/SevMalKabulSeriNo_Modal.cshtml
@@ -55,11 +55,13 @@
                                         <th data-formatter="EmptyDataFormatter" data-field="OLCU_BR1" data-halign="center" data-align="center">ÖLÇÜ BİRİM 1</th>
                                         <th data-formatter="MiktarFormatter" data-field="MIKTAR2" data-halign="center" data-align="center">MİKTAR 2</th>
                                         <th data-formatter="EmptyDataFormatter" data-field="OLCU_BR2" data-halign="center" data-align="center">ÖLÇÜ BİRİM 2</th>
-                                        <th data-formatter="KalinlikFormatter" data-field="ACIK1" data-halign="center" data-align="center">KALINLIK</th>
-                                        <th data-formatter="GenislikFormatter" data-field="ACIK2" data-halign="center" data-align="center">GENİŞLİK</th>
+                                        <th data-formatter="KalinlikFormatter" data-field="ACIK2" data-halign="center" data-align="center">KALINLIK</th>
+                                        <th data-formatter="GenislikFormatter" data-field="ACIK1" data-halign="center" data-align="center">GENİŞLİK</th>
                                         <th data-formatter="EmptyDataFormatter" data-field="ACIK3" data-halign="center" data-align="center">ÜRÜN NO</th>
                                         <th data-formatter="EmptyDataFormatter" data-field="SERI_NO_3" data-halign="center" data-align="center">KALİTE</th>
                                         <th data-formatter="EmptyDataFormatter" data-field="SERI_NO_4" data-halign="center" data-align="center">KAPLAMA KALINLIĞI</th>
+                                        <th data-formatter="EmptyDataFormatter" data-field="ACIKLAMA_4" data-halign="center" data-align="center">MENŞEİ</th>
+                                        <th data-formatter="EmptyDataFormatter" data-field="ACIKLAMA_5" data-halign="center" data-align="center">ESKİ BOBİN NO</th>
                                     </tr>
                                 </thead>
                             </table>
@@ -99,7 +101,8 @@
             var KopyaVerisi = "";
             //SERI_NO ACIK2 SERI_NO_3 SERI_NO_4 MIKTAR1 MIKTAR2 ACIK1 ACIK3
             for (var i = 0; i < SeriNoModalList.length; i++) {
-                KopyaVerisi += `${SeriNoModalList[i].SERI_NO}	${GenislikFormat(SeriNoModalList[i].ACIK2)}	${SeriNoModalList[i].SERI_NO_3}	${SeriNoModalList[i].SERI_NO_4}	${MiktarFormatla(SeriNoModalList[i].MIKTAR1)}	${MiktarFormatla(SeriNoModalList[i].MIKTAR2)}	${GenislikKalinlikFormat(SeriNoModalList[i].ACIK1)}	${SeriNoModalList[i].ACIK3}\n`;
+                KopyaVerisi += `${SeriNoModalList[i].SERI_NO}	${DecimalSeperator(SeriNoModalList[i].ACIK1)
+                    }	${SeriNoModalList[i].SERI_NO_3}	${SeriNoModalList[i].SERI_NO_4}	${MiktarFormatla(SeriNoModalList[i].MIKTAR1)}	${MiktarFormatla(SeriNoModalList[i].MIKTAR2)}	${GenislikFormat(SeriNoModalList[i].ACIK2)}	${SeriNoModalList[i].ACIK3}	${SeriNoModalList[i].ACIKLAMA_4}	${SeriNoModalList[i].ACIKLAMA_5}\n`;
             }
 
             try {
@@ -165,7 +168,7 @@
 
     function GenislikFormatter(value, index, row) {
         if (value?.toString().trim().length > 0) {
-            return GenislikKalinlikFormat(value);
+            return value;
         }
 
         return "-";
@@ -173,10 +176,10 @@
 
     function GenislikKalinlikFormat(value)
     {
-        return parseFloat(value).toFixed(2).toString().replace(".", ",");
+        return value;
     }
 
     function GenislikFormat(value) {
-        return parseInt(value);
+        return value;
     }
 </script>
